version/0.5/_sources/api/core/settings/_autosummary/api/analysis_control.rst.txt
:orphan:

.. _analysis_control:

analysis_control
================

.. currentmodule:: ansys.systemcoupling.core.adaptor.api_24_1.analysis_control

.. autoclass:: analysis_control
    :show-inheritance:
    :undoc-members:
.. rubric:: Properties

analysis_type : `str`
    Analysis type.
    
    Allowed values:
    - "Steady"
    - "Transient" 

optimize_if_one_way : `bool`
    Optimizes various controls for a one-way workflow, if the
    data transfers form a unidirectional graph.

warped_face_tolerance : :ref:`RealType<real_type>`
    Set warped face detection tolerance (1e-6 is default value, 1.0 means disabled).

allow_simultaneous_update : `bool`
    Allow simultaneous update of independent participants.

simultaneous_participants : `str`
    Controls which participants are updated simultaneously.

allow_simultaneous_initialization : `bool`
    Allow simultaneous initialization of participants.

mpi_pause_timeout : :ref:`RealType<real_type>`
    Specify MPI pause time (in seconds) to wait for other participants to finish solving

partitioning_algorithm : `str`
    Partitioning algorithm used when participants are running in parallel.
    
    Allowed values:
    
    - "SharedAllocateMachines" - Participants share both machines and cores.
    
    - "SharedAllocateCores" - Participants share machines but not cores.
    
    - "DistributedAllocateCores" - Participants minimally share cores and machines. (Linux only)
    
    - "DistributedAllocateMachines" - Participants never share cores or machines. (Linux only)
    
    - "Custom" - Custom algorithm.

cleanup_inflated_fm_us : `bool`
    Controls whether System Coupling will cleanup inflated FMUs at end of analysis.

allow_iterations_only_mode : `bool`
    Explicitly set whether iterations-only mode is allowed.

target_initialization_option : `str`
    Select option for target initialization.

fluent_region_update_at_step : `bool`
    Allow update of Fluent regions at the beginning of a step.

mesh_import_on_initialization : `bool`
    Select whether to import the mesh during the analysis initialization.

import_all_regions : `bool`
    Select whether to import mesh for all defined regions.

bypass_fluent_adapter : `bool`
    Switch to bypass Fluent adapter.

variable_to_expression_transfer : `bool`
    Convert variable-based data transfers to expression transfers.

update_mapping_weights : `str`
    Weight factor when multiple transfers are stabilized.
    
    Allowed values:
    
    - "Off" (default)
    - "EveryStep"
    - "EveryIteration" 

solve_incremental_displacement_first : `bool`
    Force participants serving incremental displacement to solve first.

write_scs_file : `bool`
    Force writing of scs file even if participants are auto-started.

check_for_input_files_changes : `str`
    Controls whether System Coupling will check for changes in participant input files.

.. rubric:: Children

================================================================   ====================================================================================

Child                                                                                                                                           Summary

================================================================   ====================================================================================
:ref:`global_stabilization <global_stabilization>`                                                                       Global stabilization settings.

:ref:`apip <apip>`                                                                                                        Apip-related expert settings.

:ref:`avoid_data_reconstruction <avoid_data_reconstruction>`           Control whether data reconstruction should be done for elemental intensive data.

:ref:`unmapped_value_options <unmapped_value_options>`                                                                         Unmapped value settings.

:ref:`automatic_alignment_options <automatic_alignment_options>`                                                          Automatic alignment settings.

================================================================   ====================================================================================

.. rubric:: Included in:

==============================   =================

Parent                                     Summary

==============================   =================
:ref:`setup_root <setup_root>`       'root' object

==============================   =================

